glowne menu strony

--- a/index.html
+++ b/index.html
@@ -1,18 +1,41 @@
 <!doctype html>
-<html lang="pl">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Sit on Chair - warsztaty</title>
         <meta name="description" content="Nasza strona Sit on Chair">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800&amp;subset=latin-ext" rel="stylesheet">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>       
-        
 
+    </head>
+    <body>
+        <div class="wrap-all">
+            <header class="page-header">
+
+                <div class="container clearfix">
+                    <a href="/" class='page-logo'>
+                        Sit <span>on</span> chair
+                    </a>
+                    <nav class="page-nav">
+                        <ul class="page-nav-list">
+                            <li>
+                                <a href="">O firmie</a>
+                                <ul class="page-nav-sublist">
+                                    <li><a href="">Aktualności</a></li>
+                                    <li><a href="">Nasz team</a></li>
+                                    <li><a href="">Historia</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="">Galeria</a></li>
+                            <li><a href="">Kontakt</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>
 
     </body>
 </html>
